# hawcx_agentic_sdk

./: AUDIT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.fast  LICENSE  README.md
.github/workflows/: ci.yml  release-node.yml  release-python.yml  release.yml
crates/haap-rsv/: Cargo.toml  README.md
crates/haap-rsv-bin/: Cargo.toml
crates/haap-rsv-bin/src/: lib.rs  main.rs
crates/haap-rsv-bin/tests/: verify_endpoint.rs
crates/haap-rsv/examples/: embedded_rsv.rs
crates/haap-rsv/src/: authorizer.rs  lib.rs  rsv.rs
crates/haap-rsv/tests/: cascade_rejections.rs
crates/haap-sdk-cli/: Cargo.toml
crates/haap-sdk-cli/src/: main.rs
crates/haap-sdk-ipc/: Cargo.toml
crates/haap-sdk-ipc/src/: connection.rs  lib.rs  paths.rs  peer_cred.rs
crates/haap-sdk-sealer/: Cargo.toml
crates/haap-sdk-sealer/src/: file_sealer.rs  kms_sealer.rs  os_keychain_sealer.rs  sealer.rs
crates/haap-sdk-types/: Cargo.toml
crates/haap-sdk-types/src/: config.rs  errors.rs
crates/haap-substrate-reader/: Cargo.toml
docker/bundle/: .env.example  docker-compose.yml  smoke-test.sh  wire-e2e-test.sh
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DISTRIBUTION.md  DISTRIBUTION.tex  HAWCX_MANAGER_AUDIT.tex  INTEGRATION_TEST_SETUP.md  RELEASE.md  RSV_HTTP_API.md  SUPERVISOR_OPS.md  halt_state_alpha2_closure_2026-05-17.md  priority2_foundation_closure_2026-05-17.md
node/: README.md  package-lock.json  package.json
node/examples/: minimal.ts
node/src/: agent.ts  binary.ts  index.ts  ipc.ts
node/tests/: agent.test.ts  ipc.test.ts  mockAssembler.ts
python/: .gitignore  README.md  hatch_build.py  pyproject.toml
python-crewai/: .gitignore  LICENSE  README.md  pyproject.toml
python-crewai/src/hawcx_crewai/: __init__.py  tool.py
python-crewai/tests/: test_hawcx_tool.py
python/examples/: crewai_integration.py  minimal.py
python/src/hawcx_haap/: __init__.py  _binary.py  agent.py  auth_ipc.py  ipc.py
python/tests/: conftest.py  test_agent.py  test_enroll.py
scripts/: mock-mcp-server.py  stage-mcp-sidecar-test.sh  stage-rsv-wire-test.sh
scripts/mint-helper/: Cargo.toml
scripts/mint-helper/src/: decrypt.rs  main.rs
