[workspace]
resolver = "2"
members = [
    "crates/haap-sdk-types",
    "crates/haap-sdk-ipc",
    "crates/haap-sdk-sealer",
    "crates/haap-substrate-reader",
    "crates/haap-rsv",
    "crates/haap-rsv-bin",
    "crates/haap-sdk-cli",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Hawcx Inc."]
repository = "https://github.com/hawcx/hawcx_agentic_sdk"
rust-version = "1.75"

[workspace.dependencies]
# Registry-deps to hx_agent_crypto_core. Resolved from the private
# Kellnr at cargo.hawcx.com (see [registries.hawcx] in
# ~/.cargo/config.toml — onboarding doc in README). Replaces the
# previous sibling-clone path-deps; no more `../hx_agent_crypto_core/`
# requirement on disk for either CI or local development.
#
# Engineers who want side-by-side editing of crypto-core can add a
# personal `[patch."registry+https://cargo.hawcx.com/api/v1/crates/"]`
# block to their own `.cargo/config.toml` pointing back at a sibling
# checkout. That pattern is not checked in because the registry is
# the source of truth for CI and external customers.
haap-core = { version = "0.8", registry = "hawcx", default-features = false, features = ["redis-backend"] }
haap-crypto = { version = "0.8", registry = "hawcx" }
haap-ipc = { version = "0.8", registry = "hawcx" }
haap-wire = { version = "0.8", registry = "hawcx" }
haap-redis = { version = "0.8", registry = "hawcx" }

# SDK-internal crates (referenced via workspace = true)
haap-sdk-types = { path = "crates/haap-sdk-types" }
haap-sdk-ipc = { path = "crates/haap-sdk-ipc" }
haap-sdk-sealer = { path = "crates/haap-sdk-sealer" }
haap-substrate-reader = { path = "crates/haap-substrate-reader" }
haap-rsv = { path = "crates/haap-rsv" }

# External crates
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }
async-trait = "0.1"
bytes = "1"
once_cell = "1"

# Sealer
argon2 = "0.5"
aes-gcm = "0.10"
keyring = "3"
rand = "0.8"

# Redis (substrate)
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
lru = "0.12"

# IPC + OS process identity
nix = { version = "0.27", features = ["socket", "fs"] }
libc = "0.2"

# CLI + HTTP server (RSV-bin)
clap = { version = "4", features = ["derive"] }
axum = "0.7"
base64 = "0.22"

# Constant-time comparison for bearer-token authn on `haap-rsv`'s HTTP
# surface. Hard-pinned through hx_labs's vetted version chain via the
# Cargo lock; do not swap for ad-hoc memcmp.
subtle = "2.6"

# Hyper/tower needed by `haap-rsv-bin` to serve axum over a UDS — axum
# 0.7's `serve()` only accepts `TcpListener`, so we drive hyper's per-
# connection HTTP/1 server directly when binding a Unix socket. Versions
# tracked through axum 0.7's transitive chain.
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = { version = "0.5", features = ["util"] }
