[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "hawcx-haap"
version = "0.1.0a11"
description = "Customer SDK for the Hawcx Agent Authentication Protocol (HAAP). Connects to a customer-deployed haap-supervisor and proxies tool calls through the Assembler per CS v7.2.5 Profile E."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Hawcx Inc." }]
keywords = ["haap", "hawcx", "agent", "authentication", "mcp", "tbac"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "mypy>=1.5",
    "ruff>=0.4",
    "maturin>=1.5",
]
crewai = [
    "crewai>=0.51",
]

[project.urls]
Homepage = "https://github.com/hawcx/hawcx_agentic_sdk"
Repository = "https://github.com/hawcx/hawcx_agentic_sdk"
Issues = "https://github.com/hawcx/hawcx_agentic_sdk/issues"


[tool.maturin]
bindings = "bin"
# The Rust source lives in the sibling hx_agent_client_auth_service repo.
# Pass --manifest-path at build time:
#   maturin build --release \
#     --manifest-path ../../hx_agent_client_auth_service/crates/hawcx-manager/Cargo.toml
# CI handles this via the release-python.yml workflow.
python-source = "src"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
