[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "hawcx-haap"
version = "0.1.0a12"
description = "Customer SDK for the Hawcx Agent Authentication Protocol (HAAP). Connects to a customer-deployed haap-supervisor and proxies tool calls through the Assembler per CS v7.2.5 Profile E."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Hawcx Proprietary License" }
authors = [{ name = "Hawcx Inc." }]
keywords = ["haap", "hawcx", "agent", "authentication", "mcp", "tbac"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "mypy>=1.5",
    "ruff>=0.4",
    "build>=1.2",
    "wheel>=0.43",
]
crewai = [
    "crewai>=0.51",
]

[project.urls]
Homepage = "https://github.com/hawcx/hawcx_agentic_sdk"
Repository = "https://github.com/hawcx/hawcx_agentic_sdk"
Issues = "https://github.com/hawcx/hawcx_agentic_sdk/issues"


[tool.hatch.build.targets.wheel]
packages = ["src/hawcx_haap"]
# The platform-specific hawcx-manager binary is staged into
# src/hawcx_haap/_bin/ by the release workflow before building each
# platform-tagged wheel. A custom build hook (hatch_build.py) maps it into
# the package ONLY when present, so dev/editable installs and pure-Python
# builds (no binary staged) still work. Build platform wheels with
# `python -m build --wheel` (NOT via sdist, which strips the binary).
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
# The sdist is pure-Python: it never carries the binary. Source builds
# (pip install from sdist) still work for dev; get_binary_path() then
# raises a clear "install from a platform wheel" error.
include = [
    "src/hawcx_haap",
    "tests",
    "examples",
    "README.md",
    "pyproject.toml",
    "hatch_build.py",
]
exclude = [
    "src/hawcx_haap/_bin",
]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
