[package]
name = "haap-rsv-bin"
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "haap-rsv"
path = "src/main.rs"

[dependencies]
haap-rsv = { workspace = true }
haap-sdk-types = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
# Zeroize on drop for the cached response_key (Profile E sidecar holds
# response_key only between /verify and /encrypt-response — handle TTL
# is 30s — but we still wipe on drop to avoid stale key material in
# freed heap pages).
zeroize = { workspace = true }

[dev-dependencies]
# Round-trip tests for /encrypt-response exercise the library contract
# directly (haap_core::response::{encrypt_response,decrypt_response})
# so the bytes-flow the handler promises is pinned without needing a
# live Redis / token / cascade.
haap-core = { workspace = true }
serde_json = { workspace = true }
