[package]
name = "haap-rsv"
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Hawcx HAAP Verifier — embeddable §9 16-step verification cascade for MCP server operators"
keywords = ["hawcx", "haap", "agent", "auth", "mcp"]
categories = ["authentication", "cryptography"]
readme = "README.md"
publish = true

[dependencies]
haap-sdk-types = { workspace = true }
haap-substrate-reader = { workspace = true }
haap-core = { workspace = true }
haap-wire = { workspace = true }
haap-crypto = { workspace = true }
haap-redis = { workspace = true }
tokio = { workspace = true }
redis = { workspace = true }
lru = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
# Constant-time compare for H-1 token aud_hash vs. RsvConfig::audience_hash.
subtle = { workspace = true }

[features]
default = []
integration-tests = []

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
# v6.8.0 (W4): RegistrationScopeAuthorizer tests build a fake
# SessionRecord, which references RistrettoPoint + Scalar. Pinned to
# the same major version haap-core uses.
curve25519-dalek = { version = "4", features = ["serde", "rand_core"] }
