[package]
name = "haap-sdk-ipc"
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Unix-only: nix + libc back the SO_PEERCRED / LOCAL_PEERCRED peer-cred
# check and UDS listener surface (CS v7.2.5 §39.12.1). Windows uses the
# spec-defined Named Pipe + DACL primitives in hx_labs::haap_ipc::win_dacl
# (§39.12.2); see lib.rs.
[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
libc = { workspace = true }
