[package]
name = "stage-rsv-mint-helper"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "stage-rsv-mint"
path = "src/main.rs"

# Pinned to the same registry versions the authorizer + SDK pipeline use
# (cargo.hawcx.com). Mirrors `hx_agent_authorizer/Cargo.toml`'s
# [workspace.dependencies] block so this binary mints tokens whose
# wire-format matches what the deployed RSV image accepts.
[dependencies]
haap-core = { version = "0.8", registry = "hawcx" }
haap-crypto = { version = "0.8", registry = "hawcx" }
haap-wire = { version = "0.8", registry = "hawcx" }
base64 = "0.22"
curve25519-dalek = { version = "4", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
